avoid click on images on small screens

--- a/css/toepferei.css
+++ b/css/toepferei.css
@@ -38,8 +38,17 @@ body {
     object-fit: contain;
 }
 
+@media (min-width: 992px) {
 .img-thumbnail:hover {
     border:3px solid white;
+}
+}
+
+@media (max-width: 992px) {
+    .img-thumbnail {
+        pointer-events: none;
+        cursor: default;
+    }
 }
 
 .img-fluid {
@@ -48,20 +57,7 @@ body {
     object-fit: contain;
 }
 
-@media (max-width: 992px) { /* Für Bildschirme kleiner als 992px (Bootstrap-Breakpoint für große Bildschirme) */
-    .modal-dialog {
-        display: none !important; /* Versteckt das Modal */
-    }
-}
-
-@media (min-width: 992px) { /* Für Bildschirme ab 992px */
-    .modal-dialog {
-        display: flex !important; /* Zeigt das Modal */
-    }
-}
-
 .modal-dialog {
-    display: flex !important;
     align-items: center !important;
     justify-content: center !important;
     max-width: 90% !important; 
